prometheus/sdf-k8s01/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: sdf-k8s01-prometheus-server
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/whitelist-source-range: 134.79.0.0/16,172.16.0.0/12
spec:
  rules:
  - host: "prometheus.slac.stanford.edu"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: sdf-k8s01-prometheus-server
            port:
              name: http
